bugfix get validation tracking
